--- a/src/Pages/Work/WorkPage.scss
+++ b/src/Pages/Work/WorkPage.scss
@@ -16,6 +16,10 @@
     @media screen and (max-width: 1080px) {
       font-size: 0.75rem;
     }
+    @media screen and (max-width: 500px) {
+      display: none;
+    }
+
     @media screen and (max-width: 350px) {
       font-size: 0.65rem;
     }
@@ -62,13 +66,26 @@
       }
     }
   }
+  .mobile-title {
+    display: none;
+    @media screen and (max-width: 500px) {
+      display: block;
+      text-align: center;
+      margin-bottom: 2rem;
+      font-size: 0.7rem;
+      font-family: "Pilat Extended Book";
+      margin-top: 2rem;
+    }
+  }
   .work-col {
     position: relative;
-    width: 100%;
+    width: 95%;
+    margin: auto;
     padding: 0 32px;
     padding-bottom: 2.5rem;
     padding-top: 2rem;
     box-sizing: border-box;
+    margin-bottom: 4rem;
     @media screen and (max-width: 768px) {
       padding: 0 16px;
     }
@@ -79,8 +96,8 @@
       display: inline-block;
       position: relative;
       width: 50%;
-      padding: 0 8px;
-      margin-bottom: 12px;
+      padding: 10px 10px;
+
       box-sizing: border-box;
       vertical-align: top;
       color: #fff;
