--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -19,6 +19,7 @@
   @media screen and (max-width: 768px) {
     font-size: 0.6rem;
   }
+
   @media screen and (max-width: 330px) {
     font-size: 0.5rem;
   }
@@ -146,7 +147,7 @@
         color: #000;
         display: inline-block;
         position: relative;
-        line-height: 1.4;
+        line-height: 2;
         // transition: all 0.2s ease;
         // -webkit-text-stroke: 2.4px #000;
         // -webkit-text-fill-color: transparent;
@@ -158,14 +159,17 @@
         }
         @media screen and (max-width: 768px) {
           font-size: 38px;
+          &:hover {
+            -webkit-text-stroke: 1px #000;
+          }
         }
         @media screen and (max-width: 650px), screen and (max-height: 500px) {
-          font-size: 22px;
-          line-height: 2;
-          -webkit-text-stroke: 1.3px #000;
-          -webkit-text-fill-color: none;
+          font-size: 25px;
+          line-height: 2.3;
+          //-webkit-text-stroke: 0.3px #000;
+          //-webkit-text-fill-color: none;
           color: #000;
-          font-weight: 700;
+          font-weight: 600;
           letter-spacing: 1px;
         }
         @media screen and (max-height: 500px) {
